--- a/getttnow.html
+++ b/getttnow.html
@@ -2,19 +2,30 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>RENT OR BUY, GETTT</title>
+	<title>GETTT NOW</title>
+	<!--뷰포트(viewport)-->
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
 	<!--favicon-->
 	<link href="img/favicon.png" type="image/icon" rel="shortcut icon">
 	<!--외부CSS-->
 	<link href="css/main.css" type="text/css" rel="stylesheet">
-	<link href="css/sub_getttnow.css" type="text/css" rel="stylesheet">
 	<!--나눔고딕 웹폰트-->
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
-	<!--jQuery 연결-->
-   <script src="js/jquery-3.5.1.js"></script>
-   <!--sub_menu jQuery 연결-->
-   <script src="js/sub_bg.js"></script>
+   
+    <!--bxSlider css 연결-->
+    <link href="css/jquery.bxslider.css" type="text/css" rel="stylesheet">
+    <!--Swiper CSS-->
+	 <link href="css/swiper-bundle.css" type="text/css" rel="stylesheet">
+   
+    <!--jQuery 연결-->
+    <script src="js/jquery-3.5.1.js"></script>
+    <!--main jQuery 연결-->
+    <script src="js/main.js"></script>
+    <!--swiper_jQuery 연결-->
+    <script src="js/swiper-bundle.js"></script>
+    <!--bxSlider jQuery 연결-->
+    <script src="js/jquery.bxslider.js"></script>
 </head>
 <body>
 	<div class="wrap">
