--- a/getttnow.html
+++ b/getttnow.html
@@ -9,6 +9,7 @@
 	<link href="img/favicon.png" type="image/icon" rel="shortcut icon">
 	<!--외부CSS-->
 	<link href="css/main.css" type="text/css" rel="stylesheet">
+	<link href="css/sub_getttnow.css" type="text/css" rel="stylesheet">
 	<!--나눔고딕 웹폰트-->
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
