--- a/index.html
+++ b/index.html
@@ -7,25 +7,28 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
 	<!--favicon-->
 	<link href="img/favicon.png" type="image/icon" rel="shortcut icon">
+	<!--Open Graph-->
+	<meta property="og:image" content="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/thumnail.png">
+	
 	<!--외부CSS-->
 	<link href="css/main.css" type="text/css" rel="stylesheet">
 	<!--나눔고딕 웹폰트-->
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
    
-    <!--bxSlider css 연결-->
-    <link href="css/jquery.bxslider.css" type="text/css" rel="stylesheet">
-    <!--Swiper CSS-->
-	 <link href="css/swiper-bundle.css" type="text/css" rel="stylesheet">
+	<!--bxSlider css 연결-->
+	<link href="css/jquery.bxslider.css" type="text/css" rel="stylesheet">
+	<!--Swiper CSS-->
+	<link href="css/swiper-bundle.css" type="text/css" rel="stylesheet">
    
-    <!--jQuery 연결-->
-    <script src="js/jquery-3.5.1.js"></script>
-    <!--main jQuery 연결-->
-    <script src="js/main.js"></script>
-    <!--swiper_jQuery 연결-->
-    <script src="js/swiper-bundle.js"></script>
-    <!--bxSlider jQuery 연결-->
-    <script src="js/jquery.bxslider.js"></script>
+	<!--jQuery 연결-->
+	<script src="js/jquery-3.5.1.js"></script>
+	<!--main jQuery 연결-->
+	<script src="js/main.js"></script>
+	<!--swiper_jQuery 연결-->
+	<script src="js/swiper-bundle.js"></script>
+	<!--bxSlider jQuery 연결-->
+	<script src="js/jquery.bxslider.js"></script>
 </head>
 <body>
 	<div class="wrap">
@@ -37,21 +40,21 @@
 				<!--왼쪽 SNS 아이콘-->
 					<div class="h_sns">
 						<ul>
-							<li><a href="#"><img src="img/header/cscenter_ic.png" alt="CS센터"></a></li>
-							<li><a href="https://www.facebook.com/CheilWorldwide/"><img src="img/header/facebook_ic.png" alt="페이스북"></a></li>
-							<li><a href="https://www.instagram.com/gettt_official/?hl=ko"><img src="img/header/insta_ic.png" alt="인스타그램"></a></li>
+							<li><a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/header/cscenter_ic.png" alt="CS센터"></a></li>
+							<li><a href="https://www.facebook.com/CheilWorldwide/"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/header/facebook_ic.png" alt="페이스북"></a></li>
+							<li><a href="https://www.instagram.com/gettt_official/?hl=ko"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/header/insta_ic.png" alt="인스타그램"></a></li>
 						</ul>
 					</div>
 					<!--중앙 로고-->
 					<div class="h_logo">
-						<a href="index.html"><img src="img/LOGO.png" alt="GETTT 로고"></a>
+						<a href="index.html"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/LOGO.png" alt="GETTT 로고"></a>
 					</div>
 					<!--오른쪽 Mypage 아이콘-->
 					<div class="h_mypage">
 						<ul>
-							<li><a href="#"><img src="img/header/mypage_ic.png" alt="마이페이지"></a></li>
-							<li><a href="#"><img src="img/header/cart_ic.png" alt="장바구니"></a></li>
-							<li><a href="#"><img src="img/header/search_ic.png" alt="검색"></a></li>
+							<li><a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/header/mypage_ic.png" alt="마이페이지"></a></li>
+							<li><a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/header/cart_ic.png" alt="장바구니"></a></li>
+							<li><a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/header/search_ic.png" alt="검색"></a></li>
 						</ul>
 					</div>
 				</div>
@@ -141,7 +144,7 @@
 							    <a href="#">BRAND</a>
 							    <!--서브메뉴이미지-->
                                 <div class="sub_img">
-                                    <a href="#"><img src="img/header/Brandstory.png" alt="브랜드스토리"></a>
+                                    <a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/header/Brandstory.png" alt="브랜드스토리"></a>
                                 </div>							
 							</li>
 							<!--BRAND 끝-->
@@ -163,16 +166,16 @@
 	<!--------------메인슬라이드--------------->
 		<section class="slide slider">
 				<div>
-					<a href="#"><img src="img/mainpage/mainslide/slide02.png" alt="일상의 황금기"></a>
+					<a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/mainslide/slide02.png" alt="일상의 황금기"></a>
 				</div>
 				<div>
-					<a href="#"><img src="img/mainpage/mainslide/Slide03.png" alt="CUSVEN"></a>
+					<a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/mainslide/Slide03.png" alt="CUSVEN"></a>
 				</div>
 				<div>
-					<a href="#"><img src="img/mainpage/mainslide/slide04.png" alt="스니커즈할인"></a>
+					<a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/mainslide/slide04.png" alt="스니커즈할인"></a>
 				</div>
 				<div>
-					<a href="#"><img src="img/mainpage/mainslide/slide01.png" alt="PRCSM 스튜디오 쿠션"></a>
+					<a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/mainslide/slide01.png" alt="PRCSM 스튜디오 쿠션"></a>
 				</div>
 		</section>
 	<!--------------대여 및 구매--------------->
@@ -184,7 +187,7 @@
 						<div class="swiper-slide">
 							<a href="#">
 								<div class="r_img">
-									<img src="img/mainpage/rent/rent01.png" alt="블랙 레더 블루종">
+									<img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/rent/rent01.png" alt="블랙 레더 블루종">
 								</div>							
 								<div class="r_des">
 									<h3 class="bold">GREEDILOUS</h3>
@@ -197,7 +200,7 @@
 						<div class="swiper-slide">
 							<a href="#">
 								<div class="r_img">
-									<img src="img/mainpage/rent/rent02.png" alt="케이지 이어링 아트피스">
+									<img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/rent/rent02.png" alt="케이지 이어링 아트피스">
 								</div>
 								<div class="r_des">
 									<h3 class="bold">MONDAM</h3>
@@ -210,7 +213,7 @@
 						<div class="swiper-slide">
 							<a href="#">
 								<div class="r_img">
-									<img src="img/mainpage/rent/rent03.png" alt="스트레이트진">
+									<img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/rent/rent03.png" alt="스트레이트진">
 								</div>
 								<div class="r_des">
 									<h3 class="bold">LEUNI</h3>
@@ -223,7 +226,7 @@
 						<div class="swiper-slide">
 							<a href="#">
 								<div class="r_img">
-									<img src="img/mainpage/rent/rent04.png" alt="인스탁스 미니90">
+									<img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/rent/rent04.png" alt="인스탁스 미니90">
 								</div>
 								<div class="r_des">
 									<h3 class="bold">INSTAX</h3>
@@ -236,7 +239,7 @@
 						<div class="swiper-slide">
 							<a href="#">
 								<div class="r_img">
-									<img src="img/mainpage/rent/rent05.png" alt="스팽글 원숄더 드레스">
+									<img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/rent/rent05.png" alt="스팽글 원숄더 드레스">
 								</div>
 								<div class="r_des">
 									<h3 class="bold">GREEDILOUS</h3>
@@ -249,7 +252,7 @@
 						<div class="swiper-slide">
 							<a href="#">
 								<div class="r_img">
-									<img src="img/mainpage/rent/rent06.png" alt="케일리 스몰 크로코">
+									<img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/rent/rent06.png" alt="케일리 스몰 크로코">
 								</div>
 								<div class="r_des">
 									<h3 class="bold">ANDY&amp;DEBB</h3>
@@ -262,7 +265,7 @@
 						<div class="swiper-slide">
 							<a href="#">
 								<div class="r_img">
-									<img src="img/mainpage/rent/rent07.png" alt="뽀삐 쟈카드 시어링 점퍼 퍼플">
+									<img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/rent/rent07.png" alt="뽀삐 쟈카드 시어링 점퍼 퍼플">
 								</div>
 								<div class="r_des">
 									<h3 class="bold">MIMICAWE</h3>
@@ -275,7 +278,7 @@
 						<div class="swiper-slide">
 							<a href="#">
 								<div class="r_img">
-									<img src="img/mainpage/rent/rent08.png" alt="커스벤 티스톤 스테인레스 스틸 컬렉션">
+									<img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/rent/rent08.png" alt="커스벤 티스톤 스테인레스 스틸 컬렉션">
 								</div>
 								<div class="r_des">
 									<h3 class="bold">CUSVEN</h3>
@@ -299,37 +302,37 @@
 					<!--INSIDE01-->
 					<div class="inside01">
 						<div class="inside01_img">
-						<a href="#"><img src="img/mainpage/inside/inside01.png" alt="박윤희대표"></a>
+						<a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/inside/inside01.png" alt="박윤희대표"></a>
 						</div>
 						<div class="inside01_btn">
-						<a href="#"><img src="img/mainpage/inside/readmore.png" alt="more"></a>
+						<a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/inside/readmore.png" alt="more"></a>
 						</div>
 					</div>
 					<!--INSIDE02-->
 					<div class="inside02">
 						<div class="inside02_img">
-						<a href="#"><img src="img/mainpage/inside/inside02.png" alt="그리디어스"></a>
+						<a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/inside/inside02.png" alt="그리디어스"></a>
 						</div>
 						<div class="inside02_btn">
-						<a href="#"><img src="img/mainpage/inside/readmore.png" alt="more"></a>
+						<a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/inside/readmore.png" alt="more"></a>
 						</div>
 					</div>
 					<!--INSIDE03-->
 					<div class="inside03">
 						<div class="inside03_img">
-						<a href="#"><img src="img/mainpage/inside/inside03.png" alt="gimmetheyoung"></a>
+						<a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/inside/inside03.png" alt="gimmetheyoung"></a>
 						</div>
 						<div class="inside03_btn">
-						<a href="#"><img src="img/mainpage/inside/readmore.png" alt="more"></a>
+						<a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/inside/readmore.png" alt="more"></a>
 						</div>
 					</div>
 					<!--INSIDE04-->
 					<div class="inside04">
 						<div class="inside04_img">
-						<a href="#"><img src="img/mainpage/inside/inside04.png" alt="장현영, 장현경 대표"></a>
+						<a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/inside/inside04.png" alt="장현영, 장현경 대표"></a>
 						</div>
 						<div class="inside04_btn">
-						<a href="#"><img src="img/mainpage/inside/readmore.png" alt="more"></a>
+						<a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/inside/readmore.png" alt="more"></a>
 						</div>
 					</div>
 					
@@ -342,19 +345,19 @@
 				<div class="guide_in">
 					<h1>HOW TO GETTT</h1>
 					<div class="guide_img">
-						<a href="#"><img src="img/mainpage/guide/howtogettt.png" alt="겟트이용방법"></a>
+						<a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/guide/howtogettt.png" alt="겟트이용방법"></a>
 					</div>
 					<div class="guide_btn">
-						<a href="#"><img src="img/mainpage/guide/readmore.png" alt="더보기"></a>
+						<a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/guide/readmore.png" alt="더보기"></a>
 					</div>
 				</div>
 				<div class="guide_in">
 					<h1>FITTING DELIVERY</h1>
 					<div class="guide_img">
-						<a href="#"><img src="img/mainpage/guide/fitting.png" alt="피팅서비스"></a>
+						<a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/guide/fitting.png" alt="피팅서비스"></a>
 					</div>
 					<div class="guide_btn_dark">
-						<a href="#"><img src="img/mainpage/guide/readmore.png" alt="더보기"></a>
+						<a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/guide/readmore.png" alt="더보기"></a>
 					</div>
 				</div>
 			</div>
@@ -365,34 +368,34 @@
 				<h1>GETTT INSTAGRAM</h1>
 				<ul>
 					<li>
-						<a href="#"><img src="img/mainpage/instagram/instagram01.png" alt="instagram01"></a>
+						<a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/instagram/instagram01.png" alt="instagram01"></a>
 					</li>
 					<li>
-						<a href="#"><img src="img/mainpage/instagram/instagram02.png" alt="instagram02"></a>
+						<a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/instagram/instagram02.png" alt="instagram02"></a>
 					</li>
 					<li>
-						<a href="#"><img src="img/mainpage/instagram/instagram03.png" alt="instagram03"></a>
+						<a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/instagram/instagram03.png" alt="instagram03"></a>
 					</li>
 					<li>
-						<a href="#"><img src="img/mainpage/instagram/instagram04.png" alt="instagram04"></a>
+						<a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/instagram/instagram04.png" alt="instagram04"></a>
 					</li>
 					<li>
-						<a href="#"><img src="img/mainpage/instagram/instagram05.png" alt="instagram05"></a>
+						<a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/instagram/instagram05.png" alt="instagram05"></a>
 					</li>
 					<li>
-						<a href="#"><img src="img/mainpage/instagram/instagram06.png" alt="instagram06"></a>
+						<a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/instagram/instagram06.png" alt="instagram06"></a>
 					</li>
 					<li>
-						<a href="#"><img src="img/mainpage/instagram/instagram07.png" alt="instagram07"></a>
+						<a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/instagram/instagram07.png" alt="instagram07"></a>
 					</li>
 					<li>
-						<a href="#"><img src="img/mainpage/instagram/instagram08.png" alt="instagram08"></a>
+						<a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/instagram/instagram08.png" alt="instagram08"></a>
 					</li>
 					<li>
-						<a href="#"><img src="img/mainpage/instagram/instagram09.png" alt="instagram09"></a>
+						<a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/instagram/instagram09.png" alt="instagram09"></a>
 					</li>
 					<li>
-						<a href="#"><img src="img/mainpage/instagram/instagram10.png" alt="instagram10"></a>
+						<a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/mainpage/instagram/instagram10.png" alt="instagram10"></a>
 					</li>
 				</ul>
 			</div>
@@ -441,7 +444,7 @@
 			<div class="footer_3">
 				<div class="wrap_center">
 					<div class="f_logo">
-						<a href="index.html"><img src="img/LOGO.png" alt="로고"></a>
+						<a href="index.html"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/LOGO.png" alt="로고"></a>
 					</div>
 					<address>
 						회사명 : (주)제일기획　|　대표이사 : 유정근　|　주소 : (주) 제일기획 : 서울특별시 용산구 이태원로 222(한남동)　|　대표번호 : 1522-9219
