--- a/getttnow.html
+++ b/getttnow.html
@@ -38,21 +38,21 @@
 				<!--왼쪽 SNS 아이콘-->
 					<div class="h_sns">
 						<ul>
-							<li><a href="#"><img src="img/header/cscenter_ic.png" alt="CS센터"></a></li>
-							<li><a href="https://www.facebook.com/CheilWorldwide/"><img src="img/header/facebook_ic.png" alt="페이스북"></a></li>
-							<li><a href="https://www.instagram.com/gettt_official/?hl=ko"><img src="img/header/insta_ic.png" alt="인스타그램"></a></li>
+							<li><a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/header/cscenter_ic.png" alt="CS센터"></a></li>
+							<li><a href="https://www.facebook.com/CheilWorldwide/"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/header/facebook_ic.png" alt="페이스북"></a></li>
+							<li><a href="https://www.instagram.com/gettt_official/?hl=ko"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/header/insta_ic.png" alt="인스타그램"></a></li>
 						</ul>
 					</div>
 					<!--중앙 로고-->
 					<div class="h_logo">
-						<a href="index.html"><img src="img/LOGO.png" alt="GETTT 로고"></a>
+						<a href="index.html"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/LOGO.png" alt="GETTT 로고"></a>
 					</div>
 					<!--오른쪽 Mypage 아이콘-->
 					<div class="h_mypage">
 						<ul>
-							<li><a href="#"><img src="img/header/mypage_ic.png" alt="마이페이지"></a></li>
-							<li><a href="#"><img src="img/header/cart_ic.png" alt="장바구니"></a></li>
-							<li><a href="#"><img src="img/header/search_ic.png" alt="검색"></a></li>
+							<li><a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/header/mypage_ic.png" alt="마이페이지"></a></li>
+							<li><a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/header/cart_ic.png" alt="장바구니"></a></li>
+							<li><a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/header/search_ic.png" alt="검색"></a></li>
 						</ul>
 					</div>
 				</div>
@@ -142,7 +142,7 @@
 							    <a href="#">BRAND</a>
 							    <!--서브메뉴이미지-->
                                 <div class="sub_img">
-                                    <a href="#"><img src="img/header/Brandstory.png" alt="브랜드스토리"></a>
+                                    <a href="#"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/header/Brandstory.png" alt="브랜드스토리"></a>
                                 </div>							
 							</li>
 							<!--BRAND 끝-->
@@ -163,7 +163,7 @@
 <!----------------------섹션 시작----------------------->
 <section class="getttnow">
 	<div class="title">
-		<img src="img/subpage/gettt_now_title.gif" alt="겟트나우">
+		<img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/subpage/gettt_now_title.gif" alt="겟트나우">
 	</div>
 	<div class="wrap_center">
 		<h1>GETTT NOW</h1>
@@ -171,7 +171,7 @@
 			<li>
 				<a href="#">
 					<div class="now_img">
-						<img src="img/subpage/getttnow01.png" alt="MAMELL STOOL">
+						<img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/subpage/getttnow01.png" alt="MAMELL STOOL">
 					</div>
 					<div class="now_des">
 						<h2>내 공간의 감성 오브제, <br>MAMELL STOOL</h2>
@@ -182,7 +182,7 @@
 			<li>
 				<a href="#">
 					<div class="now_img">
-						<img src="img/subpage/getttnow02.png" alt="일상의 황금기">
+						<img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/subpage/getttnow02.png" alt="일상의 황금기">
 					</div>
 					<div class="now_des">
 						<h2>THE GOLDEN AGE :<br>일상의 황금기</h2>
@@ -193,7 +193,7 @@
 			<li>
 				<a href="#">
 					<div class="now_img">
-						<img src="img/subpage/getttnow03.png" alt="PRICSM 쿠션 시리즈">
+						<img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/subpage/getttnow03.png" alt="PRICSM 쿠션 시리즈">
 					</div>
 					<div class="now_des">
 						<h2>THE SPACE MADE FROM FUTURE</h2>
@@ -204,7 +204,7 @@
 			<li>
 				<a href="#">
 					<div class="now_img">
-						<img src="img/subpage/getttnow04.png" alt="CUSVEN">
+						<img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/subpage/getttnow04.png" alt="CUSVEN">
 					</div>
 					<div class="now_des">
 						<h2>CUSTOM YOUR OWN WATCH, CUSVEN</h2>
@@ -215,7 +215,7 @@
 			<li>
 				<a href="#">
 					<div class="now_img">
-						<img src="img/subpage/getttnow05.png" alt="스니커즈할인">
+						<img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/subpage/getttnow05.png" alt="스니커즈할인">
 					</div>
 					<div class="now_des">
 						<h2>ATTENTION! TO MY STEPS</h2>
@@ -226,7 +226,7 @@
 			<li>
 				<a href="#">
 					<div class="now_img">
-						<img src="img/subpage/GETTTNOW06.png" alt="memecawe 20fw">
+						<img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/subpage/GETTTNOW06.png" alt="memecawe 20fw">
 					</div>
 					<div class="now_des">
 						<h2>이번 겨울은 이런 컬러매치 어때요? MIMICAWE 20FW 입점</h2>
@@ -237,7 +237,7 @@
 			<li>
 				<a href="#">
 					<div class="now_img">
-						<img src="img/subpage/GETTTNOW07.png" alt="양말에디션">
+						<img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/subpage/GETTTNOW07.png" alt="양말에디션">
 					</div>
 					<div class="now_des">
 						<h2>WISH YOU A HAPPY HOLIDAY !</h2>
@@ -248,7 +248,7 @@
 			<li>
 				<a href="#">
 					<div class="now_img">
-						<img src="img/subpage/GETTTNOW08.png" alt="THE COAT FOR LIFE">
+						<img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/subpage/GETTTNOW08.png" alt="THE COAT FOR LIFE">
 					</div>
 					<div class="now_des">
 						<h2>THE COAT FOR LIFE</h2>
@@ -259,7 +259,7 @@
 			<li>
 				<a href="#">
 					<div class="now_img">
-						<img src="img/subpage/GETTTNOW09.png" alt="Leather is attitude">
+						<img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/subpage/GETTTNOW09.png" alt="Leather is attitude">
 					</div>
 					<div class="now_des">
 						<h2>LEATHER IS ATTITUDE</h2>
@@ -270,7 +270,7 @@
 			<li>
 				<a href="#">
 					<div class="now_img">
-						<img src="img/subpage/GETTTNOW10.png" alt="SABOR A MI, MUTA BAG">
+						<img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/subpage/GETTTNOW10.png" alt="SABOR A MI, MUTA BAG">
 					</div>
 					<div class="now_des">
 						<h2>ABOR A MI, MUTA BAG</h2>
@@ -281,7 +281,7 @@
 			<li>
 				<a href="#">
 					<div class="now_img">
-						<img src="img/subpage/GETTTNOW11.png" alt="TIMELESS FOR YOUR TASTE">
+						<img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/subpage/GETTTNOW11.png" alt="TIMELESS FOR YOUR TASTE">
 					</div>
 					<div class="now_des">
 						<h2>TIMELESS FOR YOUR TASTE</h2>
@@ -292,7 +292,7 @@
 			<li>
 				<a href="#">
 					<div class="now_img">
-						<img src="img/subpage/GETTTNOW12.jpg" alt="THE WARMTH OF BROWN">
+						<img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/subpage/GETTTNOW12.jpg" alt="THE WARMTH OF BROWN">
 					</div>
 					<div class="now_des">
 						<h2>THE WARMTH OF BROWN</h2>
@@ -303,7 +303,7 @@
 			<li>
 				<a href="#">
 					<div class="now_img">
-						<img src="img/subpage/GETTTNOW13.jpg" alt="FEEL THE BLUES">
+						<img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/subpage/GETTTNOW13.jpg" alt="FEEL THE BLUES">
 					</div>
 					<div class="now_des">
 						<h2>FEEL THE BLUES</h2>
@@ -314,7 +314,7 @@
 			<li>
 				<a href="#">
 					<div class="now_img">
-						<img src="img/subpage/GETTTNOW14.jpg" alt="GLOSSY MOONLIGHT">
+						<img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/subpage/GETTTNOW14.jpg" alt="GLOSSY MOONLIGHT">
 					</div>
 					<div class="now_des">
 						<h2>GLOSSY MOONLIGHT</h2>
@@ -325,7 +325,7 @@
 			<li>
 				<a href="#">
 					<div class="now_img">
-						<img src="img/subpage/GETTTNOW15.png" alt="SEOUL CONTEMPORARY">
+						<img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/subpage/GETTTNOW15.png" alt="SEOUL CONTEMPORARY">
 					</div>
 					<div class="now_des">
 						<h2>SEOUL CONTEMPORARY</h2>
@@ -336,7 +336,7 @@
 			<li>
 				<a href="#">
 					<div class="now_img">
-						<img src="img/subpage/GETTTNOW16.jpg" alt="가을을 온몸에 휘감다">
+						<img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/subpage/GETTTNOW16.jpg" alt="가을을 온몸에 휘감다">
 					</div>
 					<div class="now_des">
 						<h2>가을을 온몸에 휘감다</h2>
@@ -347,7 +347,7 @@
 			<li>
 				<a href="#">
 					<div class="now_img">
-						<img src="img/subpage/GETTTNOW17.jpg" alt="BLOOMING EVERYWHERE">
+						<img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/subpage/GETTTNOW17.jpg" alt="BLOOMING EVERYWHERE">
 					</div>
 					<div class="now_des">
 						<h2>BLOOMING EVERYWHERE</h2>
@@ -358,7 +358,7 @@
 			<li>
 				<a href="#">
 					<div class="now_img">
-						<img src="img/subpage/GETTTNOW18.png" alt="KHAKI FOR EVERYTHING">
+						<img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/subpage/GETTTNOW18.png" alt="KHAKI FOR EVERYTHING">
 					</div>
 					<div class="now_des">
 						<h2>KHAKI FOR EVERYTHING</h2>
@@ -369,7 +369,7 @@
 			<li>
 				<a href="#">
 					<div class="now_img">
-						<img src="img/subpage/GETTTNOW19.png" alt="RENT KYE’S RUNWAY">
+						<img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/subpage/GETTTNOW19.png" alt="RENT KYE’S RUNWAY">
 					</div>
 					<div class="now_des">
 						<h2>RENT KYE’S RUNWAY</h2>
@@ -426,7 +426,7 @@
 			<div class="footer_3">
 				<div class="wrap_center">
 					<div class="f_logo">
-						<a href="index.html"><img src="img/LOGO.png" alt="로고"></a>
+						<a href="index.html"><img src="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/LOGO.png" alt="로고"></a>
 					</div>
 					<address>
 						회사명 : (주)제일기획　|　대표이사 : 유정근　|　주소 : (주) 제일기획 : 서울특별시 용산구 이태원로 222(한남동)　|　대표번호 : 1522-9219
