--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<!--뷰포트(viewport)-->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
 	<!--favicon-->
-	<link href="img/favicon.png" type="image/icon" rel="shortcut icon">
+	<link href="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/favicon.png" type="image/icon" rel="shortcut icon">
 	<!--Open Graph-->
 	<meta property="og:image" content="https://cdn.jsdelivr.net/gh/SummerLeeB/GETTT/img/Thumbnail.png">
 	
